# Haiway

./: .gitignore  .gitmodules  README.md
app/: README.md  readme.txt
doc/: README.md
framework/: README.md  readme.txt
framework/js-init/esp32/: .gitignore  CMakeLists.txt  flash.sh  readme.txt
framework/js-init/esp32/components/foo/: CMakeLists.txt
framework/js-init/esp32/src/: main.c  my_port.c
kernel/: .gitignore  README.md  readme.txt
kernel/vendors/espressif/boards/esp32/aws_demos/: partition-table.csv
libs/: readme.txt
runtime/: readme.txt
runtime/boot/: readme.txt
runtime/boot/esp32/: CMakeLists.txt  flash.sh  monitor.sh  readme.txt
runtime/boot/esp32/components/foo/: CMakeLists.txt
runtime/boot/esp32/src/: main.c
runtime/jerryscript/cmake/: toolchain-esp32.cmake  toolchain_mcu_stm32f1.cmake
